@@ -6,56 +6,39 @@ import java.util.ArrayList;
 import java.util.Date;
 
 import java.util.*;
-class InboxMessage{
-    private Date date;
-    private String sender;
-    private String message;
 
-    public InboxMessage(Date date, String sender, String message) {
-        this.date = date;
-        this.sender = sender;
-        this.message = message;
-    }
-
-    public Date getDate() {
-        return date;
-    }
-
-    public String getSender() {
-        return sender;
-    }
-
-    public String getMessage() {
-        return message;
-    }
-}
 public class Gmail extends Email {
 
     int inboxCapacity; //maximum number of mails inbox can store
     //Inbox: Stores mails. Each mail has date (Date), sender (String), message (String). It is guaranteed that message is distinct for all mails.
     //Trash: Stores mails. Each mail has date (Date), sender (String), message (String)
+
+    ArrayList<EmailTemplate> inbox;
+    ArrayList<EmailTemplate> trash;
+
     public Gmail(String emailId, int inboxCapacity) {
         super(emailId);
         this.inboxCapacity = inboxCapacity;
+
+        inbox = new ArrayList<>();
+        trash = new ArrayList<>();
     }
 
-    LinkedList<InboxMessage> inbox=new LinkedList<>();
-    LinkedList<InboxMessage> trash=new LinkedList<>();
-    int current_mail_index = 0;
-    int trashSize = 0;
-    //HashMap<String,Object>
+
     public void receiveMail(Date date, String sender, String message){
         // If the inbox is full, move the oldest mail in the inbox to trash and add the new mail to inbox.
         // It is guaranteed that:
         // 1. Each mail in the inbox is distinct.
         // 2. The mails are received in non-decreasing order. This means that the date of a new mail is greater than equal to the dates of mails received already.
 
-        if(getInboxSize() == getInboxCapacity()){
-            InboxMessage oldMail  = inbox.getFirst();
-            deleteMail(oldMail.getMessage());
+        if(inbox.size() == inboxCapacity){
+            EmailTemplate emailTemplate = inbox.get(0);
+            inbox.remove(0);
+            trash.add(emailTemplate);
         }
-        //inbox.add(new InboxMessage(date, sender, message));
-        inbox.add(new InboxMessage(date, sender, message));
+        //add latest email
+        EmailTemplate emailTemplate = new EmailTemplate(date, sender, message);
+        inbox.add(emailTemplate);
 
     }
 
@@ -63,20 +46,17 @@ public class Gmail extends Email {
         // Each message is distinct
         // If the given message is found in any mail in the inbox, move the mail to trash, else do nothing
         //inbox = inbox.next;
-        int idx = -1;
-        Date date = null;
-        String sender = null;
+        EmailTemplate emailTemplate = null;
         for (int i = 0; i < inbox.size(); i++) {
-            if (inbox.get(i).getMessage() == message) {
-                idx = i;
-                date = inbox.get(i).getDate();
-                sender = inbox.get(i).getSender();
+            EmailTemplate emailTemplate1 = inbox.get(i);
+            if (emailTemplate1.getMessage().equals(message)) {
+                emailTemplate = emailTemplate1;
                 break;
             }
         }
-        if(idx != -1){
-            inbox.remove(idx);
-            trash.add(new InboxMessage(date,sender,message));
+        if(emailTemplate!=null){
+            inbox.remove(emailTemplate);
+            trash.add(emailTemplate);
         }
     }
 
@@ -88,7 +68,8 @@ public class Gmail extends Email {
             return null;
         }
         else{
-            return inbox.getLast().getMessage();
+            EmailTemplate emailTemplate = inbox.get(inbox.size()-1);
+            return emailTemplate.getMessage();
         }
 
     }
@@ -99,7 +80,8 @@ public class Gmail extends Email {
         if(getInboxSize() == 0){
             return null;
         }else{
-            return inbox.getFirst().getMessage();
+            EmailTemplate emailTemplate = inbox.get(0);
+            return emailTemplate.getMessage();
         }
     }
 
@@ -107,8 +89,12 @@ public class Gmail extends Email {
         //find number of mails in the inbox which are received between given dates
         //It is guaranteed that start date <= end date
         int count = 0;
+
         for (int i = 0; i < inbox.size(); i++) {
-            if(inbox.get(i).getDate().compareTo(start) >= 0 && inbox.get(i).getDate().compareTo(end) <= 0){
+
+            EmailTemplate emailTemplate = inbox.get(i);
+
+            if(emailTemplate.getDate().compareTo(start) >= 0 && emailTemplate.getDate().compareTo(end) <= 0){
                 count++;
             }
         }
@@ -132,6 +118,6 @@ public class Gmail extends Email {
 
     public int getInboxCapacity() {
         // Return the maximum number of mails that can be stored in the inbox
-        return inboxCapacity-getInboxSize();
+        return inboxCapacity;
     }
 }
